2018-02-20 Jo Fahlke <jorrit@jorrit.de>

	* ipmi-config/: Simplify legacy command scripts to not mangle
	shell parameters.
	
2018-02-16 GIRARD, MARC <marc.girard@atos.net>

	* libfreeipmi/api/ipmi-kcs-driver-api.c,
	libfreeipmi/api/ipmi-lan-session-common.c,
	libfreeipmi/api/ipmi-ssif-driver-api.c: When bridging, target the
	BMC LUN not the SMS LUN.
	
2018-01-18 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-common.c (ipmi_open): Fix error output
	corner case.  Newline necessary to allow pstdout library to output
	buffer on error.

	* common/toolcommon/pstdout.c (_pstdout_print): Fix debug build
	corner case.

2017-11-08 Michel Ferland <Michel.Ferland@kontron.com>

	* ipmipower/ipmipower_arg.c: Fix invalid parsing of
	--wait-until-on and --wait-until-off options.

2017-10-31 Bernd Zeimetz <bernd@bzed.de>

	* configure.ac: Fix cross compilation (bug #52290)

2017-09-22 Bernhard M. Wiedemann <bwiedemann@suse.de>

	* configure.ac: Use ChangeLog date instead of build date.

2017-08-13 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c: Add
	configuration support for static router ips.

2017-08-12 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c:
	Support checkout of all static & dynamic address info (source,
	enable, status, prefix_length)

2017-08-11 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c:
	Support configuring IPv6/ipv4 addressing.  Fix error message
	outputs.

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c:
	Re-work output of IPv6 addresses, a separate key is not generated
	for each possible address output.

2017-08-09 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c: Check
	malloc for errors.

	* Fix compiler warnings.

	* libfreeipmi/cmds/ipmi-lan-cmds.c: Fix incorrect LS vs. MS comment.

	* ipmi-config/: Minor code cleanup.
